--- a/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
+++ b/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
@@ -10,6 +10,7 @@ spec:
   - port: 9200
     protocol: TCP
     targetPort: 9200
+    nodePort: {{ elasticsearch_nodeport }}
   selector:
     app: elasticsearch-logging
   type: NodePort
