--- a/roles/ecp/templates/ecp-config.json.j2
+++ b/roles/ecp/templates/ecp-config.json.j2
@@ -8,7 +8,7 @@ data:
     nezNch6izJPtoPd2PLD+a1yuUHp4xr/ttYW1vjskh+OKLuhvJTnT5Ud+YLHWXOm37pPuB4y5bJKMd0I9SKYjsn6sCNqz/0sSOrM1s8bG8nrOxjOp8Z5zOfHmGR52byv5tfQre1H1cRNFh6Xh840pPPWwQPmmFo2Dy40JCE4puwY=
   kubernetes.url: https:\/\/{{ kube_api_server }}:6443
   etcd.url: http:\/\/{{ master_hosts[0] }}:2379
-  file-server.url: {{ master_hosts[0] }}:31085\/fornax
+  file-server.url: {{ master_hosts[0] }}:31081\/canes
   registry.url: {{ registry_domain }}
   reg.domain: {{ registry_domain }}
   harbor.host: http:\/\/{{ master_hosts[0] }}:31096
