--- a/roles/harbor/templates/mysql-rc.yaml.j2
+++ b/roles/harbor/templates/mysql-rc.yaml.j2
@@ -27,6 +27,7 @@ spec:
           mountPath: /var/lib/mysql
       volumes:
       - name: mysql-storage
-        emptyDir: {}
+        hostPath:
+          path: /var/lib/mysql
       nodeSelector:
         harbor: "yes"
