add lable for mysql, elasticsearch and grafana

--- a/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
+++ b/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
@@ -57,3 +57,5 @@ spec:
       - hostPath:
           path: /opt/es_data
         name: es-persistent-storage
+      nodeSelector:
+        elasticsearch: "yes"
