--- a/roles/ecp/templates/mysql/mysql-controller.yaml.j2
+++ b/roles/ecp/templates/mysql/mysql-controller.yaml.j2
@@ -38,3 +38,5 @@ spec:
       - name: mysql-persistent-storage
         hostPath:
           path: /usr/db_data
+      nodeSelector:
+        mysql: "yes"
