--- a/roles/harbor/templates/mysql-rc.yaml.j2
+++ b/roles/harbor/templates/mysql-rc.yaml.j2
@@ -20,7 +20,7 @@ spec:
         ports:
         - containerPort: 3306
         env:
-          - name: MYSQL_ROOT_PASSWORD
+          - name: MYSQL_ROOT_PWD
             value: root123
         volumeMounts:
         - name: mysql-storage
