use hostpath instead of emptydir

--- a/roles/harbor/templates/registry-rc.yaml.j2
+++ b/roles/harbor/templates/registry-rc.yaml.j2
@@ -25,6 +25,7 @@ spec:
           mountPath: /storage
       volumes:
       - name: storage
-        emptyDir: {}
+        hostPath:
+          path: /storage
       nodeSelector:
         harbor: "yes"
