Enhance offline install

--- a/roles/ecp/templates/appstore/helm_rudder.yaml.j2
+++ b/roles/ecp/templates/appstore/helm_rudder.yaml.j2
@@ -83,6 +83,7 @@ spec:
         - name: RUDDER_HELM_CHART_IMAGE_DIR
           value: /opt/rudder/helm/image
         image: {{ rudder_image }}
+        imagePullPolicy: IfNotPresent
         args:
         - --insecure=true
         ports:
@@ -95,6 +96,7 @@ spec:
 {% if ecp is defined and ecp %}
       - name: helm
         image: {{ helm_image }}
+        imagePullPolicy: IfNotPresent
         args:
         - --address=127.0.0.1:8879
         - --repo-path=/opt/helm/repository/local
