--- a/roles/ecp/templates/canes/fluentd-es-ds.yaml.j2
+++ b/roles/ecp/templates/canes/fluentd-es-ds.yaml.j2
@@ -57,6 +57,7 @@ spec:
       containers:
       - name: fluentd-es
         image: {{ fluentd_image }}
+        imagePullPolicy: IfNotPresent
         env:
         - name: FLUENTD_ARGS
           value: --no-supervisor -q
