--- a/roles/ecp/templates/events/events-controller.yaml.j2
+++ b/roles/ecp/templates/events/events-controller.yaml.j2
@@ -24,6 +24,7 @@ spec:
       containers:
       - name: firmament-events
         image: {{ events_image }}
+        imagePullPolicy: IfNotPresent
         env:
            - name: ELASTICSEARCH_HOST
              value: elasticsearch-logging
