--- a/roles/addon/templates/kube-dash.yml.j2
+++ b/roles/addon/templates/kube-dash.yml.j2
@@ -42,10 +42,8 @@ spec:
           initialDelaySeconds: 30
           timeoutSeconds: 30
       serviceAccountName: kubernetes-dashboard
-      # Comment the following tolerations if Dashboard must not be deployed on master
-      tolerations:
-      - key: node-role.kubernetes.io/master
-        effect: NoSchedule
+      nodeSelector:
+        k8s-app: kubernetes-dashboard
 ---
 kind: Service
 apiVersion: v1
