--- a/roles/ecp/templates/lyra/lyra-controller.yaml.j2
+++ b/roles/ecp/templates/lyra/lyra-controller.yaml.j2
@@ -16,10 +16,13 @@ spec:
         app: firmament-lyra
         version: v0.3
     spec:
+      nodeSelector:
+        management: "yes"
       serviceAccountName: lyra
       containers:
       - name: firmament-lyra
         image: {{ lyra_image }}
+        imagePullPolicy: IfNotPresent
         securityContext:
           privileged: true
         env:
