--- a/roles/harbor/templates/mysql-rc.yaml.j2
+++ b/roles/harbor/templates/mysql-rc.yaml.j2
@@ -28,6 +28,6 @@ spec:
       volumes:
       - name: mysql-storage
         hostPath:
-          path: /var/lib/mysql
+          path: /var/lib/mysql/harbor
       nodeSelector:
         harbor: "yes"
