--- a/roles/ecp/templates/appstore/helm_rudder.yaml.j2
+++ b/roles/ecp/templates/appstore/helm_rudder.yaml.j2
@@ -73,6 +73,7 @@ spec:
         type: api
       name: rudder
     spec:
+      serviceAccountName: appstore
       containers:
       - name: rudder
         env:
