--- a/roles/ecp/templates/appstore/appstore-k8s-rbac.yaml.j2
+++ b/roles/ecp/templates/appstore/appstore-k8s-rbac.yaml.j2
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: tiller
+  name: appstore
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: tiller
+  name: appstore
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: tiller
+  name: appstore
   namespace: kube-system
 
