--- a/roles/docker/templates/docker.j2
+++ b/roles/docker/templates/docker.j2
@@ -1,5 +1,3 @@
-INSECURE_REGISTRY=""
-DOCKER_OPTS=""
-{% if ansible_os_family == "RedHat" -%}
-DOCKER_STORAGE_OPTIONS="--storage-driver=overlay"
-{% endif -%}
+# /etc/sysconfig/docker
+
+OPTIONS='--insecure-registry={{ insecure_registry }}'
