(HA)ecp shared data directory: support internal gluster, external nfs, or local filesystem

--- a/roles/ecp/templates/appstore/helm_rudder.yaml.j2
+++ b/roles/ecp/templates/appstore/helm_rudder.yaml.j2
@@ -120,6 +120,6 @@ spec:
           name: kubecfg
       - name: repo
         hostPath:
-          path: /etc/repository/
+          path: {{ ecp_share_dir }}/appstore/repository/
       nodeSelector:
-        appstore: "yes"
+        management: "yes"
