--- a/roles/ecp/templates/appstore/tiller.yaml.j2
+++ b/roles/ecp/templates/appstore/tiller.yaml.j2
@@ -54,4 +54,4 @@ spec:
           successThreshold: 1
           timeoutSeconds: 1
       nodeSelector:
-        appstore: "yes"
+        management: "yes"
