--- a/roles/harbor/templates/proxy-rc.yaml.j2
+++ b/roles/harbor/templates/proxy-rc.yaml.j2
@@ -22,4 +22,4 @@ spec:
         - containerPort: 443
         - containerPort: 8080
       nodeSelector:
-        harbor: "yes"
+        management: "yes"
