--- a/roles/harbor/templates/registry-rc.yaml.j2
+++ b/roles/harbor/templates/registry-rc.yaml.j2
@@ -26,6 +26,6 @@ spec:
       volumes:
       - name: storage
         hostPath:
-          path: /storage
+          path: {{ ecp_share_dir }}/harbor/storage
       nodeSelector:
-        harbor: "yes"
+        management: "yes"
