--- a/roles/master/templates/kubeadm.yaml.j2
+++ b/roles/master/templates/kubeadm.yaml.j2
@@ -1,11 +1,23 @@
 apiVersion: kubeadm.k8s.io/v1alpha1
 kind: MasterConfiguration
-api:
-  advertiseAddress: {{ master_hosts[0] }}
 kubernetesVersion: {{ kube_version }}
 networking:
   podSubnet: {{ pod_network_cidr }}
   serviceSubnet: {{ service_cidr }}
+api:
+  advertiseAddress: {{ master_hosts[0] }}
+apiServerCertSANs:
+{% for hostname in master_hosts %}
+  - {{ hostname }}
+{% endfor %}
+{% if master_hosts|length > 1 %}
+  - {{ vip }}
+{% endif %}
+etcd:
+  endpoints:
+{% for etcd_endpoint in etcd_endpoints_list %}
+  - {{ etcd_endpoint }}
+{% endfor %}
 token: {{ token }}
 imageRepository: {{ kubeadm_image_repository }}
 controllerManagerExtraArgs:
