(HA) Configure worker node to join vip

--- a/roles/addon/templates/kube-dash.yml.j2
+++ b/roles/addon/templates/kube-dash.yml.j2
@@ -42,6 +42,8 @@ spec:
           initialDelaySeconds: 30
           timeoutSeconds: 30
       serviceAccountName: kubernetes-dashboard
+      nodeSelector:
+        management: "yes"
 ---
 kind: Service
 apiVersion: v1
