--- a/roles/ecp/templates/ecp-config.json.j2
+++ b/roles/ecp/templates/ecp-config.json.j2
@@ -6,13 +6,23 @@ metadata:
 data:
   license: |
     LcGQreceub7fbd2hMhwTVAC83d5B42JiMGtij6U+gYl4qKlvfikcBKpPTs7s/gGlqfG1P6iNH8wFO6ptWecaSmay7ZdYN3+T6VGW8T6XvmWsu7M2vDJ8dHEEiNwHlnL2MY/cdY9Jqfr9rdU3sfTHIA/zToCfIbeKwghKR2fHoVs=
-  kubernetes.url: https:\/\/{{ kube_api_server }}:6443
+{% if master_hosts|length > 1 %}
+  kubernetes.url: https:\/\/{{ vip }}:{{ nginx_port }}
+  etcd.url: {{ etcd_endpoints | regex_replace('/', '\/') }}
+  file-server.url: {{ vip }}:31081\/canes
+  registry.url: {{ registry_domain }}
+  reg.domain: {{ registry_domain }}
+  harbor.host: http:\/\/{{ vip }}:31096
+  harbor.url: http://{{ vip }}:31096
+{% else %}
+  kubernetes.url: https:\/\/{{ master_hosts[0] }}:6443
   etcd.url: http:\/\/{{ master_hosts[0] }}:2379
   file-server.url: {{ master_hosts[0] }}:31081\/canes
   registry.url: {{ registry_domain }}
   reg.domain: {{ registry_domain }}
   harbor.host: http:\/\/{{ master_hosts[0] }}:31096
   harbor.url: http://{{ master_hosts[0] }}:31096
+{% endif %}
   harbor.external.host: http:\/\/{{ public_ip }}:31096
   email.host: {{ email_host }}
   email.sender: {{ email_sender }}
