--- a/roles/ecp/templates/canes/fluentd-es-configmap.yaml.j2
+++ b/roles/ecp/templates/canes/fluentd-es-configmap.yaml.j2
@@ -279,6 +279,18 @@ data:
       tag cluster-autoscaler
     </source>
 
+    <source>
+      type tail
+      format multiline
+      multiline_flush_interval 5s
+      format_firstline /^\w\d{4}/
+      format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+      time_format %m%d %H:%M:%S.%N
+      path /var/log/message
+      pos_file /var/log/es-message.log.pos
+      tag "system.#{ENV['NODE_NAME']}"
+    </source>
+
     # Logs from systemd-journal for interesting services.
     <source>
       type systemd
