change harbor external ip to vip or master ip

--- a/roles/ecp/templates/ecp-config.json.j2
+++ b/roles/ecp/templates/ecp-config.json.j2
@@ -14,6 +14,7 @@ data:
   reg.domain: {{ registry_domain }}
   harbor.host: http:\/\/{{ vip }}:31096
   harbor.url: http://{{ vip }}:31096
+  harbor.external.host: http:\/\/{{ vip }}:31096
 {% else %}
   kubernetes.url: https:\/\/{{ master_hosts[0] }}:6443
   etcd.url: http:\/\/{{ master_hosts[0] }}:2379
@@ -22,8 +23,8 @@ data:
   reg.domain: {{ registry_domain }}
   harbor.host: http:\/\/{{ master_hosts[0] }}:31096
   harbor.url: http://{{ master_hosts[0] }}:31096
+  harbor.external.host: http:\/\/{{ master_hosts[0] }}:31096
 {% endif %}
-  harbor.external.host: http:\/\/{{ public_ip }}:31096
   email.host: {{ email_host }}
   email.sender: {{ email_sender }}
   email.password: {{ email_password }}
