change proxy_time to 10m to avoid error

--- a/roles/vip/templates/nginx/nginx.conf.j2
+++ b/roles/vip/templates/nginx/nginx.conf.j2
@@ -10,7 +10,7 @@ stream {
     server {
         listen {{ nginx_port }};
         proxy_connect_timeout 1s;
-        proxy_timeout 3s;
+        proxy_timeout 10m;
         proxy_pass apiserver;
     }
 }
