--- a/roles/ecp/templates/prometheus/prometheus.yml.j2
+++ b/roles/ecp/templates/prometheus/prometheus.yml.j2
@@ -1,6 +1,6 @@
 # my global config
 global:
-  scrape_interval:     1m scrape interval to every 15 seconds. Default is every 1 minute.
+  scrape_interval:     1m # scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 1m # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
 
