--- a/roles/ecp/templates/sas/sas-controller.yaml.j2
+++ b/roles/ecp/templates/sas/sas-controller.yaml.j2
@@ -135,7 +135,7 @@ spec:
            - name: LDAP_FLAG
              value: 'false'
            - name: LDAP_URL
-             value: ldap://192.168.101.150:389
+             value: ldap:\/\/192.168.101.150:389
            - name: LDAP_ADMIN_USER
              value: Administrator@skycloud.com
            - name: LDAP_ADMIN_PASSWORD
